--- a/estilos.css
+++ b/estilos.css
@@ -1,9 +1,6 @@
 /* Estilos globais */
 * {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    box-sizing: border-box; /* Inclui padding e bordas no tamanho total dos elementos */
-    margin: 0; /* Remove margens padrão */
-    padding: 0; /* Remove preenchimento padrão */
 }
 
 /* Estilos para o cabeçalho */
@@ -24,7 +21,7 @@ nav ul {
 }
 
 nav ul li {
-    display: inline-block;
+    display: inline;
     margin-right: 20px;
 }
 
@@ -48,15 +45,9 @@ main p {
 }
 
 main ul {
+    text-align: center;
     list-style-type: disc;
-    margin: 0 auto;
-    padding: 0;
-    display: inline-block;
-    text-align: left; /* Para manter os marcadores alinhados à esquerda */
-}
-
-main ul li {
-    margin-bottom: 10px; /* Espaçamento entre os itens da lista */
+    margin-left: 20px;
 }
 
 /* Estilos para o rodapé */
@@ -64,7 +55,7 @@ footer {
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 10px;
+    padding: 1px;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -73,51 +64,10 @@ footer {
 
 /* Estilo de fundo para o corpo do documento */
 body {
-    background-image: url('https://i.ibb.co/HFgXNRQ/Dn7-Q6v4-les-paul-guitar-wallpaper.png'); /* Link direto da imagem de fundo */
-    background-size: cover; /* Faz a imagem cobrir todo o fundo da tela */
-    background-position: center; /* Mantém a imagem centralizada */
-    background-repeat:no-repeat; /* Evita repetição da imagem de fundo */
-    color: #fff; /* Cor do texto */
-    margin: 0; /* Remove margens padrão */
-    padding: 0; /* Remove preenchimento padrão */
-    min-height: 100vh; /* Garante que o corpo ocupe no mínimo a altura total da viewport */
-}
-
-/* Estilos para vídeos responsivos */
-.responsive-iframe-container {
-    position: relative;
-    width: 100%;
-    max-width: 560px; /* Limita a largura máxima dos vídeos */
-    margin: 0 auto; /* Centraliza o contêiner */
-    padding-bottom: 56.25%; /* Mantém a proporção 16:9 */
-    height: 0;
-    margin-bottom: 20px;
-}
-
-.responsive-iframe-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
-}
-
-/* Media Queries para responsividade */
-@media (max-width: 768px) {
-    nav ul li {
-        display: block;
-        margin: 10px 0;
-    }
-
-    main ul {
-        text-align: center;
-        padding: 0;
-        margin: 20px 0;
-    }
-
-    footer {
-        position: relative;
-        padding: 20px;
-    }
+    background-image: url('https://i.ibb.co/HFgXNRQ/Dn7-Q6v4-les-paul-guitar-wallpaper.png');
+    background-size: cover;
+    background-position: unset;
+    color: #fff;
+    margin: 0;
+    padding: 0;
 }
