--- a/estilos.css
+++ b/estilos.css
@@ -75,9 +75,10 @@ footer {
 body {
     background-image: url('https://i.ibb.co/HFgXNRQ/Dn7-Q6v4-les-paul-guitar-wallpaper.png');
     background-size: cover;
-    background-position: unset;
+    background-position: center;
     background-repeat: no-repeat;
     color: #fff;
     margin: 0;
     padding: 0;
+    min-height: 100vh;
 }
